errors.txt
In file included from CustomerOrder.cpp:7:
CustomerOrder.h:44:14: error: extra qualification ‘seneca::CustomerOrder::’ on member ‘requiresItem’ [-fpermissive]
   44 |         bool CustomerOrder::requiresItem(const std::string& itemName) const;
      |              ^~~~~~~~~~~~~
In file included from Workstation.h:7,
                 from Workstation.cpp:4:
CustomerOrder.h:44:14: error: extra qualification ‘seneca::CustomerOrder::’ on member ‘requiresItem’ [-fpermissive]
   44 |         bool CustomerOrder::requiresItem(const std::string& itemName) const;
      |              ^~~~~~~~~~~~~
In file included from Workstation.h:7,
                 from LineManager.h:7,
                 from LineManager.cpp:6:
CustomerOrder.h:44:14: error: extra qualification ‘seneca::CustomerOrder::’ on member ‘requiresItem’ [-fpermissive]
   44 |         bool CustomerOrder::requiresItem(const std::string& itemName) const;
      |              ^~~~~~~~~~~~~
In file included from Workstation.h:7,
                 from tester_3_prof.cpp:11:
CustomerOrder.h:44:14: error: extra qualification ‘seneca::CustomerOrder::’ on member ‘requiresItem’ [-fpermissive]
   44 |         bool CustomerOrder::requiresItem(const std::string& itemName) const;
      |              ^~~~~~~~~~~~~
